--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,15 @@
     "browser_action": {
         "default_popup": "src/popup.html",
         "default_icon": "src/icon.png"
-    }
+    },
+    "content_scripts": [
+        {
+            "matches": [
+                "http://*.youtube.com/*",
+                "https://*.youtube.com/*"
+            ],
+            "css": [],
+            "js": ["src/scraper.js"]
+        }
+    ]
 }
