--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
     "manifest_version": 2,
     "name": "beatcast",
     "version": "0.0.0",
+    "icons": {
+        "16": "src/icon.png",
+        "48": "src/icon.png",
+        "128": "src/icon.png"
+    },
     "browser_action": {
         "default_popup": "src/popup.html",
         "default_icon": "src/icon.png"
